--- a/css/scss/_responsive.scss
+++ b/css/scss/_responsive.scss
@@ -120,7 +120,7 @@ $slide-left: left 0.7s;
 	}
 	
 	#chart-panel svg {
-		height: calc(87.5vh - 300px - 16px);
+		height: calc(87.5vh - 100px - 15px) !important;
 	}
 	
 	#chart-panel #guide-labels {
